fixed testing and logic at finance service
