# cmd/main.go
@@ -6,10 +6,15 @@ import (
 	"finance/internal/handler"
 	"finance/internal/repository"
 	"finance/internal/services"
+	"finance/migrations"
 	"finance/pkg/logger"
 	"finance/pkg/postgres"
 	"fmt"
 	"log"
+	"net/http"
+	"os"
+	"os/signal"
+	"syscall"
 	"time"
 
 	_ "finance/docs"
@@ -26,8 +31,9 @@ import (
 // @version         1.0
 // @description     API for finance simulation system.
 
-// @host            localhost:8080
+// @host            localhost:8181
 // @BasePath        /
+// @schemes   http https
 func main() {
 	cfg, err := config.NewConfig()
 	if err != nil {
@@ -45,6 +51,11 @@ func main() {
 		l.Logger.Fatal("failed connection to db", zap.Error(err))
 	}
 	defer db.Close()
+
+	err = migrations.RunMigrations(cfg.DSN)
+	if err != nil {
+		l.Logger.Fatal("failed to run migrations", zap.Error(err))
+	}
 
 	userRepo := repository.NewUserRepository(db.Pool)
 	limitRepo := repository.NewLimitRepository(db.Pool)
@@ -71,15 +82,39 @@ func main() {
 	r := gin.Default()
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	v1 := r.Group("/api/v1")
-	{
-		v1.GET("/user-limits", handler.ListUserLimit)
-		v1.GET("/tenor", handler.TenorList)
-		v1.POST("/calculate-installments", handler.Installment)
-		v1.POST("/submit-financing", handler.Submit)
-	}
+
+	r.GET("/limits", handler.ListUserLimit)
+	r.GET("/tenors", handler.TenorList)
+	r.POST("/calculate-installments", handler.Installment)
+	r.POST("/submit-financing", handler.Submit)
 
 	r.Run(fmt.Sprintf(":%d", cfg.HttpPort))
+
+	srv := &http.Server{
+		Addr:    fmt.Sprintf(":%d", cfg.HttpPort),
+		Handler: r,
+	}
+
+	go func() {
+		if err := srv.ListenAndServe(); err != nil && err != http.ErrServerClosed {
+			l.Logger.Fatal("listen error", zap.Error(err))
+		}
+	}()
+
+	quit := make(chan os.Signal, 1)
+	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
+
+	<-quit
+	l.Logger.Info("Shutting down server...")
+
+	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
+	defer cancel()
+
+	if err := srv.Shutdown(ctx); err != nil {
+		l.Logger.Fatal("Server forced to shutdown", zap.Error(err))
+	}
+
+	l.Logger.Info("Server exiting")
 }
 
 var validateDateNotPast validator.Func = func(fl validator.FieldLevel) bool {
